<resources>
    <string name="app_name">MaestroMultiplicacion2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_configuracion">Configuración</string>
    <string name="menu_entrenar">¡Entrenar!</string>
    <string name="menu_estadisticas">Estadísticas</string>
    <string name="menu_logros">Logros</string>
    <string name="menu_enviar">Enviar estadísticas</string>
    <string name="menu_contactos">Contactos</string>
    <string name="menu_contactosFavoritos">Contactos favoritos</string>
    <string name="menu_salir">Cerra sesión</string>
    <string name="menu_eliminarUsuarios">Eliminar usuarios</string>
    <string name="eliminarEsta">Eliminar estadísticas</string>

    <string name="dificultad">Selecciona la dificultad</string>
    <string name="multiplicacion">Tabla de multiplicar</string>
    <string name="avatar">Selecciona tu superhéroe favorito</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--Texto de la pantalla de login-->
    <string name="nombreUsuario">Nombre:</string>
    <string name="cuenta">Tipo de cuenta:</string>
    <string name="contrasenia">Contraseña:</string>
    <string name="avatarDeFondo">Avatar:</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Texto de la aplicación-->
    <string name="eliminarUsuarios">Eliminar usuarios</string>
    <string name="instruccionEliminar">Haz clic a un usuario para eliminarlo</string>
    <string name="contactosFavoritos">Contactos favoritos</string>
    <string name="instruccionesContFav">Haz clic en un contacto favorito para enviar las estadísticas</string>
</resources>