<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_configuracion">

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.maestromultiplicacion20.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/nav_entrenar"
        android:name="com.example.maestromultiplicacion20.ui.entrenar.EntrenarFragment"
        android:label="@string/menu_entrenar"
        tools:layout="@layout/fragment_entrenar" />

    <fragment
        android:id="@+id/nav_estadisticas"
        android:name="com.example.maestromultiplicacion20.ui.estadisticas.EstadisticasFragment"
        android:label="@string/menu_estadisticas"
        tools:layout="@layout/fragment_estadisticas" />
    <fragment
        android:id="@+id/nav_logros"
        android:name="com.example.maestromultiplicacion20.ui.logros.FragmentLogros"
        android:label="@string/menu_logros"
        tools:layout="@layout/fragment_logros" />
    <fragment
        android:id="@+id/nav_contactos"
        android:name="com.example.maestromultiplicacion20.ui.contactos.FragmentContactos"
        android:label="@string/menu_contactos"
        tools:layout="@layout/fragment_contactos" />
    <fragment
        android:id="@+id/nav_enviar"
        android:name="com.example.maestromultiplicacion20.ui.contactosFavoritos.FragmentContactosFav"
        android:label="@string/menu_contactosFavoritos"
        tools:layout="@layout/fragment_contactos_fav" />
    <fragment
        android:id="@+id/nav_eliminar"
        android:name="com.example.maestromultiplicacion20.ui.eliminarUsuarios.FragmentEliminarUsuario"
        android:label="@string/menu_eliminarUsuarios"
        tools:layout="@layout/fragment_eliminar_usuario" />
</navigation>